--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:padding="5dp">
 
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="85dp"></TextView>
+        tools:layout_editor_absoluteX="85dp"
+        ></TextView>
       />
 
 
